# RAG-based-LLM-Applications-for-Production

./: .gitignore  config.ini  makefile  pyproject.toml  ray_script.py  ray_submiter.py  readme.md
RAGbasedLLMApplicationsforProduction/: __init__.py  app.py  data.py  embed.py
